# thesis_manuscript

./: .MAKEFILE.swp  .gitignore  Makefile  __latexindent_temp_thesis.tex  arxiv.sty  citations.md  notes.md  old_writing.tex  plan.tex  references.bib  retex.typ  review.md  thesis.bbl  thesis.bcf  thesis.blg  thesis.fdb_latexmk  thesis.fls  thesis.maf  thesis.mtc1  thesis.mtc10  thesis.mtc11  thesis.mtc2  thesis.mtc3  thesis.mtc4  thesis.mtc5  thesis.mtc8  thesis.run.xml  thesis.synctex(busy)  thesis.tex  zip_these.sh
img/chapter_1/: sphx_glr_plot_tree_regression_001.png:Zone.Identifier
img/chapter_3/: cooccurrence.drawio  ehr_trajectory_predictive.drawio  event_aggregations.drawio  icd10_flowchart_simple.drawio  mace_codes.tex  mace_flowchart_simple.drawio  patient_counter_with_decay.drawio  selection_procedure.drawio
img/chapter_4/: albumin_for_sepsis__obs_1d__compute_time_estimates_20230712__est_lr_rf__bs_50.tex  cohort_timeline.drawio  collider.drawio  complete_inference_flow.drawio  counterfactual.drawio  effect_modifier.drawio  inference_flow.drawio  instrumental_variable.drawio  mediator.drawio  timeline_albumin_for_sepsis.drawio
img/chapter_5/: _1_r_risk_domination_boxplot_df.tex
materials/: notes.md  old_writing.tex  retex.typ  retex_thèse.typ  test_template.tex
python_figures/: Artificial Intelligence and Machine Learning (AIML)-Enabled Medical Devices FDA.xlsx  plot_boosting.py  plot_fda_devices.py  plot_retex.py  pyproject.toml  retex.csv
test_template/: test_template.tex
