[tool.poetry]
name = "python-figures"
version = "0.1.0"
description = ""
authors = ["matthieu <m.doutreligne@has-sante.fr>"]
readme = "README.md"
packages = [{include = "python_figures"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.0"
matplotlib = "3.5.2"
seaborn = "^0.12.2"
numpy = "^1.25.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
